<resources>
    <string name="app_name">Score Statistics</string>
    <string name="label_add_team">Add Team</string>
    <string name="label_add_score">Add Score</string>
    <string name="label_name_team">Team name</string>
    <string name="label_save">Save</string>
    <string name="label_reset_stat">Reset Statistics</string>
    <string name="label_show_stat">Show Statistics</string>
    <string name="label_default_score_value">0</string>
    <string name="warning_empty_list">The list is empty!</string>
    <string name="warning_invalid_team_name">Invalid team name!</string>
    <string name="label_score_table">Score Table</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_sort_by">Sort by:</string>
    <string name="not_available">N/A</string>
</resources>
